Details
-
Type:
Bug
-
Status: Closed
-
Priority:
Not Evaluated
-
Resolution: Done
-
Affects Version/s: 6.3.0 RC
-
Fix Version/s: 6.3.1, 6.4.0 Beta1
-
Component/s: Quick: 3D
-
Labels:None
-
Commits:7385cae1fc (qt/qtquick3d/dev) 7385cae1fc (qt/tqtc-qtquick3d/dev) d5d8893ab8 (qt/qtquick3d/6.3) d5d8893ab8 (qt/tqtc-qtquick3d/6.3) d5d8893ab8 (qt/tqtc-qtquick3d/6.3.1) 7385cae1fc (qt/qtquick3d/6.4)
Description
For some reason QML profiler shows a really short texture upload for each frame. First I thought it might be the same thing that was happening with shader generation, but this does not seem to be tied to post-processing effects.
Should be checked if this is valid event, or something similar with the shader generation.