Fix Quick3DTextureLoad profiler events recording

Don't record access to existing QSSGTexture, record only new entries.

Fixes: QTBUG-102293
Change-Id: Idec5772e6771865f11d9d2355521c04a94d71640
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
(cherry picked from commit 7385cae1fc499d3404bfe645ef08c5b9f9605f03)